src/test/deca/codegen/valid/cast_int_to_float.deca
// Description :
//    Vérifie convertion explicite et opérations float 

// Resultats :
//    1.5

{
    int x = 3;
    println((float)(x) / 2.0);
}